@@ -49,7 +49,7 @@ GeanyPlugin		*geany_plugin;
 GeanyData		*geany_data;
 GeanyFunctions	*geany_functions;
 
-PLUGIN_VERSION_CHECK(100)
+PLUGIN_VERSION_CHECK(104)
 
 PLUGIN_SET_INFO(_("LaTeX"), _("Plugin to make Geany better support LaTeX"), "0.2",
 	    "Frank Lanitz <frank@frank.uvena.de>")
@@ -777,30 +777,6 @@ static void kbwizard(G_GNUC_UNUSED guint key_id)
 	wizard_activated(NULL, NULL);
 }
 
-static void locale_init(void)
-{
-#ifdef ENABLE_NLS
-	gchar *locale_dir = NULL;
-
-#ifdef HAVE_LOCALE_H
-	setlocale(LC_ALL, "");
-#endif
-
-#ifdef G_OS_WIN32
-	gchar *install_dir = g_win32_get_package_installation_directory("geany", NULL);
-	/* e.g. C:\Program Files\geany\lib\locale */
-	locale_dir = g_strconcat(install_dir, "\\share\\locale", NULL);
-	g_free(install_dir);
-#else
-	locale_dir = g_strdup(LOCALEDIR);
-#endif
-
-	bindtextdomain(GETTEXT_PACKAGE, locale_dir);
-	bind_textdomain_codeset(GETTEXT_PACKAGE, "UTF-8");
-	textdomain(GETTEXT_PACKAGE);
-	g_free(locale_dir);
-#endif
-}
 
 void
 plugin_init(G_GNUC_UNUSED GeanyData * data)
@@ -811,11 +787,11 @@ plugin_init(G_GNUC_UNUSED GeanyData * data)
 	gchar *kblabel_insert_ref = _("Insert \\ref");
 	gchar *kblabel_wizard = _("Run LaTeX-Wizard");
 
+	p_main->locale_init(LOCALEDIR, GETTEXT_PACKAGE);
+
 	init_encodings_latex();
 
 	tooltips = gtk_tooltips_new();
-
-	locale_init();
 
 	menu_latex = gtk_menu_item_new_with_mnemonic(_("_LaTeX"));
 	gtk_container_add(GTK_CONTAINER(geany->main_widgets->tools_menu), menu_latex);
