@@ -1,3 +1,9 @@
+2008-11-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Make usage of Geany API v104 by using of Geany's plugin init
+   locale function.
+
+
 2008-10-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * GeanyLaTeX 0.2 release
